v1.1.0/modules/schema/pages/class/TransformerTankInfo.adoc
= `TransformerTankInfo`
:toclevels: 4


+++Set of transformer tank data, from an equipment library.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TransformerTankInfo`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/AssetInfo.adoc[`AssetInfo`]
*** *`TransformerTankInfo`*
 **** xref::class/OldTransformerTankInfo.adoc[`OldTransformerTankInfo`]


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<PowerTransformerInfo,`PowerTransformerInfo`>>
//| [[slots_table.PowerTransformerInfo]]<<PowerTransformerInfo,`PowerTransformerInfo`>>
| 1 +
xref::class/PowerTransformerInfo.adoc[`PowerTransformerInfo`]
| +++Power transformer data that this tank description is part of.+++
| _n/a_

| <<TransformerEndInfos,`TransformerEndInfos`>>
//| [[slots_table.TransformerEndInfos]]<<TransformerEndInfos,`TransformerEndInfos`>>
| 1..* +
xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]
| +++Data for all the ends described by this transformer tank data.+++
| _n/a_

| <<Assets,`Assets`>>
//| [[slots_table.Assets]]<<Assets,`Assets`>>
| 0..* +
xref::class/Asset.adoc[`Asset`]
| +++All assets described by this data.+++
| xref::class/AssetInfo.adoc[`AssetInfo`]

| <<CatalogAssetType,`CatalogAssetType`>>
//| [[slots_table.CatalogAssetType]]<<CatalogAssetType,`CatalogAssetType`>>
| 0..1 +
xref::class/CatalogAssetType.adoc[`CatalogAssetType`]
| +++Asset information (nameplate) for this catalog asset type.+++
| xref::class/AssetInfo.adoc[`AssetInfo`]

| <<PowerSystemResources,`PowerSystemResources`>>
//| [[slots_table.PowerSystemResources]]<<PowerSystemResources,`PowerSystemResources`>>
| 0..* +
xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
| +++All power system resources with this datasheet information.+++
| xref::class/AssetInfo.adoc[`AssetInfo`]

| <<ProductAssetModel,`ProductAssetModel`>>
//| [[slots_table.ProductAssetModel]]<<ProductAssetModel,`ProductAssetModel`>>
| 0..1 +
xref::class/ProductAssetModel.adoc[`ProductAssetModel`]
| +++Product asset model which conforms to this catalog asset type.+++
| xref::class/AssetInfo.adoc[`AssetInfo`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Assets]
=== `Assets`
+++All assets described by this data.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

////
[.text-left]
--
<<slots_table.Assets,&#10548;>>
--
////


//[discrete]
[#CatalogAssetType]
=== `CatalogAssetType`
+++Asset information (nameplate) for this catalog asset type.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.CatalogAssetType`
| Cardinality
| 0..1
| Type
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

////
[.text-left]
--
<<slots_table.CatalogAssetType,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PowerSystemResources]
=== `PowerSystemResources`
+++All power system resources with this datasheet information.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.PowerSystemResources`
| Cardinality
| 0..*
| Type
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

////
[.text-left]
--
<<slots_table.PowerSystemResources,&#10548;>>
--
////


//[discrete]
[#PowerTransformerInfo]
=== `PowerTransformerInfo`
+++Power transformer data that this tank description is part of.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerTankInfo.PowerTransformerInfo`
| Cardinality
| 1
| Type
| xref::class/PowerTransformerInfo.adoc[`PowerTransformerInfo`]


|===

////
[.text-left]
--
<<slots_table.PowerTransformerInfo,&#10548;>>
--
////


//[discrete]
[#ProductAssetModel]
=== `ProductAssetModel`
+++Product asset model which conforms to this catalog asset type.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.ProductAssetModel`
| Cardinality
| 0..1
| Type
| xref::class/ProductAssetModel.adoc[`ProductAssetModel`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

////
[.text-left]
--
<<slots_table.ProductAssetModel,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TransformerEndInfos]
=== `TransformerEndInfos`
+++Data for all the ends described by this transformer tank data.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerTankInfo.TransformerEndInfos`
| Cardinality
| 1..*
| Type
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.TransformerEndInfos,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/PowerTransformerInfo.adoc[`PowerTransformerInfo`] | xref::class/PowerTransformerInfo.adoc#TransformerTankInfos[`TransformerTankInfos`]



| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`] | xref::class/TransformerEndInfo.adoc#TransformerTankInfo[`TransformerTankInfo`]


|===

